# context-compiler

./: .gitignore  Cargo.toml  README.md  benchmark_30_repos.py  benchmark_express.py  benchmark_otc.py  stress_test.py  stress_test_p1_tasks.py
.claude/: settings.json
evals/: ab_test_llm.py  runner.py  skeleton_measure.py  skeleton_measure_ours.py  skeleton_measure_zod.py  test_zod_skeleton.py
evals/contextbench/: tmp_input.json
evals/contextbench/cases/: case_minibench_001.json  case_minibench_002.json  case_minibench_003.json  case_minibench_004.json  case_minibench_005.json  case_minibench_006.json  case_minibench_007.json  case_minibench_008.json
evals/manifests/: context-compiler.json  ripgrep.json  zod.json
examples/: generic-context.json
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts  test-client.ts
sdk/node/: package.json
sdk/node/src/: index.ts
sdk/python/: pyproject.toml
sdk/python/ctxc/: __init__.py
src/: cli.rs  compile.rs  eval.rs  explain.rs  inspect.rs  lib.rs  loss_report.rs  main.rs  planner.rs  ranker.rs  skim.rs
src/adapters/: chat.rs  mod.rs  rag.rs
src/core/: budget.rs  cache_layout.rs  compiler.rs  context_ir.rs  context_item.rs  deduplicator.rs  embedding.rs  keyword_score.rs  loss_report.rs  mod.rs  normalizer.rs  scorer.rs  segmenter.rs  token_report.rs  tokenizer.rs
src/gateway/: server.rs
src/providers/: anthropic.rs  local_plain.rs  mod.rs  openai.rs
tests/: adr009_test.rs  budget_compliance.rs  cli_help.rs  compile_cli.rs  file_map_cli.rs  scan_cli.rs  sprint3_test.rs
(+8 files in other folders)
