[package]
name = "ctxc"
version = "0.0.2"
edition = "2021"
description = "Context Compiler — CLI local-first para compilar contexto de desenvolvimento (Sprint 0 skeleton)"
publish = false

[[bin]]
name = "ctxc"
path = "src/main.rs"

[lib]
name = "ctxc"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
getrandom = "0.2"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
rayon = "1.12.0"
tiny_http = "0.12"
tiktoken-rs = "0.5.8"
fastembed = "4"
petgraph = "0.8.3"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
